# kuroko-ai

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
scripts/: check_audio_devices.py  test_ollama.py
src/sasayaki/: config.py  main.py  types.py
src/sasayaki/api/: __init__.py  __main__.py  schemas.py  server.py
src/sasayaki/asr/: mlx_whisper_patch.py  transcriber.py
src/sasayaki/audio/: capture.py  turn_taking.py  vad.py
src/sasayaki/llm/: client.py  profiler.py  suggester.py
src/sasayaki/nlp/: keyword_extractor.py  ner.py  wiki.py
src/sasayaki/pipeline/: orchestrator.py
src/sasayaki/tts/: whisper_playback.py
src/sasayaki/ui/: app.py
src/sasayaki/vision/: face_analyzer.py  screen_capture.py
tauri-app/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
tauri-app/src/: App.tsx  main.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-app/src/components/: AudioMeter.tsx  ChatBubble.tsx  EmotionBar.tsx  FaceAnalysisPanel.tsx  Header.tsx  JumpToLatest.tsx  KeywordsPanel.tsx  ProfilePanel.tsx  SettingsSheet.tsx  StyleButton.tsx  SuggestionsPanel.tsx  TranscriptPanel.tsx  TurnTakingGauge.tsx
tauri-app/src/components/ui/: button.tsx  input.tsx  select.tsx  slider.tsx  switch.tsx  textarea.tsx
tauri-app/src/lib/: api.ts  store.ts  types.ts  useStickToBottom.ts  useTheme.ts  utils.ts
tauri-app/src/styles/: globals.css
