[project]
name = "sasayaki"
version = "0.1.0"
description = "AI Meeting Assistant - ささやき女将"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.5.1",
    "numpy>=1.26,<2",
    "silero-vad>=5.1",
    "torch>=2.3.0",
    "mlx-whisper>=0.4.0",
    "spacy>=3.7",
    "ginza>=5.2",
    "ja-ginza>=5.2",
    "ollama>=0.4",
    "wikipedia-api>=0.7",
    "gradio>=5.0",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.scripts]
sasayaki = "sasayaki.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sasayaki"]
